bug squashed

--- a/src/components/About/carousel/carousel.css
+++ b/src/components/About/carousel/carousel.css
@@ -1,14 +1,10 @@
-html,
-body,
-#root {
-  width: 100%;
-  height: 100%;
-}
+
 
 .dotsContainer {
   position: absolute;
   top: 92%;
-  margin: 0;
+  left: 50%;
+  transform: translateX(-50%);
   padding: 0;
   z-index: 1000;
 }
@@ -24,8 +20,8 @@ body,
 }
 
 .carouselContainer {
-  width: 600px;
-  height: 400px;
+  max-width: 100%;
+  width: 100%;
   position: relative;
   overflow: hidden;
   margin: 100px auto;
@@ -424,5 +420,12 @@ body,
   to {
     transform: translate(-100%, -50%);
     opacity: 0;
+  }
+}
+
+
+@media screen and (max-width: 785px) {
+  .dotsContainer {
+    top: 85%;
   }
 }
